<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">trustlook</string>
    <string name="app_id">115392998634503</string>
    <string name="action_settings">Settings</string>
    <string name="scan_device">Scan the device: </string>
    <string name="list_subject">Total apps: </string>
    <string name="scanButton_title">Scan</string>
    <string name="trustButton_title">Upload</string>
    <string name="uninstallButton_title">Uninstall</string>
    <string name="app_logo">App Logo</string>
    <string name="scan_image">Scan</string>
    <string name="scan_results">Scan Results</string>
    <string name="not_available">N/A</string>
    <string name="sample_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor</string>
    <string name="includeSystem">false</string>
    <string name="about_copyright_text">trustlook Mobile Security\nVersion [Version]\n© 2013 TrustLook, Inc.\nAll rights Reserved.</string>
    <string name="about_detail_text">\nWe are a mobile security company devoted to protect people\'s privacy.\n\nContact support\@trustlook.com with any questions or problems.</string>
    <string name="feedback_title">Send Feedback</string>
    <string name="EULA">IMPORTANT – READ CAREFULLY. YOUR USE OF THE APP DOWNLOADABLE TO YOUR APP-ENABLED MOBILE DEVICE (THE “BLURB MOBILE APP”) IS CONDITIONED UPON YOUR COMPLIANCE WITH, AND ACCEPTANCE OF, THE FOLLOWING AGREEMENT. YOU ACKNOWLEDGE AND AGREE THAT BY CLICKING ON THE ACCEPT BUTTON OR SIMILAR BUTTONS OR LINKS AS MAY BE DESIGNATED BY BLURB TO SHOW THESE TERMS AND/OR TO INSTALL THE BLURB MOBILE APP, YOU ARE ENTERING INTO A LEGALLY BINDING CONTRACT. YOU WILL NOT BE PERMITTED TO USE THE BLURB MOBILE APP AND THE ASSOCIATED BLURB SERVICES UNLESS AND UNTIL YOU ACCEPT THIS AGREEMENT AND ANY OTHER RULES OR POLICIES THAT BLURB MAY CREATE AND MAKE AVAILABLE ON ITS WEBSITE FROM TIME TO TIME.</string>

    <string name="fb_login_title">Share with your Facebook friends for more features. We are good guys, will never spam."</string>
    <string name="risk_low">Low</string>
    <string name="risk_moderate">Moderate</string>
    <string name="risk_high">High</string>
    
    <!--  remove later -->
    <string name="cancelled">Cancelled</string>
    <string name="permission_not_granted">Unable to perform selected action because permissions were not granted.</string>
    <string name="ok">OK</string>
    <string name="hello_user">Hello %1$s. Now you can share your app risk report with your friends!</string>
    <string name="success">Success</string>
    <string name="successfully_posted_post">Successfully posted %1$s</string>
    <string name="error">Error</string>
    <string name="status_update">Updating status for %1$s at %2$s</string>
    <string name="photo_post">Photo Post</string>
    <string name="you_picked">You picked:</string>
    <string name="no_friends_selected">&lt;No friends selected&gt;</string>
    <string name="no_place_selected">&lt;No place selected&gt;</string>
    <string name="pick_seattle_place">Pick a Seattle Place</string>
    <string name="exception">Exception: %1$s</string>
</resources>