<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/aboutLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/aboutMainLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textSize="18sp"
        android:text="@string/about_copyright_text" />
    
    <TextView
        android:id="@+id/aboutDetailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:textSize="15sp"
        android:text="@string/about_detail_text" />    

    <!--  feedback button -->
    <Button 
        android:id="@+id/feedbackButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="10dp"
        android:text="@string/feedback_title"
        android:textSize="20sp"
        android:onClick="scan"/>   
</LinearLayout>
